@@ -261,7 +261,7 @@ $properties = array(
         )
     ),
     'ringwidth' => array(
-        'default' => '0.22',
+        'default' => '0.18',
         'description' => 'The thickness of the hue selector (the outer ring of the color picker), expressed as a percentage of the total width of the color picker.',
         'values' => 'A number between 0.1 and 0.5',
         'samples' => array(
